@@ -1,3 +1,9 @@
+TAG: rvload-5-1-7-7
+DATE: 03/10/2014
+STAFF: sc
+CHANGES:
+1) Added checking of alt_id's
+
 TAG: rvload-5-1-7-6
 TAG: rvload-5-1-7-5
 TAG: rvload-5-1-7-4
